<resources>
    <string name="app_name">ResizeMultiplePhotos</string>
    <string name="height">height</string>
    <string name="width">width</string>
    <string name="select_nphotos">Select\nPhotos</string>
    <string name="image_saved_to_downloads">Image saved to Downloads: %1$s</string>
    <string name="failed_to_save_image">Failed to save image</string>
    <string name="ndirme_tamamland">İndirme Tamamlandı</string>
    <string name="dosya_indirildi">Dosya indirildi: %1$s</string>
    <string name="file_downloaded">Dosya indirildi</string>
    <string name="rejected_permission">Bildirim izni reddedildi!</string>
    <string name="default_400_x_800">Default: 400 x 800</string>
    <string name="enter_width_amp_height_px_to_resize_photos"><![CDATA[Enter Width & Height px to resize photos:]]></string>
</resources>