<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:translationZ="9999dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tvEnterWidthHeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:lineHeight="28dp"
            android:text="@string/enter_width_amp_height_px_to_resize_photos"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/llMeasure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEnterWidthHeight"
            app:layout_constraintWidth_percent="0.90">

            <EditText
                android:id="@+id/etWidth"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/et_bg_rounded"
                android:hint="@string/width"
                android:inputType="number"
                android:maxLength="5"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/gray" />

            <EditText
                android:id="@+id/etHeight"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/et_bg_rounded"
                android:hint="@string/height"
                android:inputType="number"
                android:maxLength="5"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/gray" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/default_400_x_800"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.04"
            app:layout_constraintStart_toStartOf="@id/llMeasure"
            app:layout_constraintTop_toBottomOf="@+id/llMeasure" />

        <Button
            android:id="@+id/btnSelectPhoto"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/btn_default"
            android:lineHeight="20dp"
            android:text="@string/select_nphotos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDefault" />

        <Button
            android:id="@+id/btnResizePhoto"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:background="@drawable/btn_radious"
            android:textColor="@color/white"
            android:lineHeight="20dp"
            android:text="Resize Photos"
            app:layout_constraintBottom_toBottomOf="@id/btnSelectPhoto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnSelectPhoto"
            app:layout_constraintTop_toTopOf="@id/btnSelectPhoto" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPhotos"
            android:paddingVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/btnSelectPhoto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/groupScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="btnResizePhoto, btnSelectPhoto, rvPhotos, tvDefault, llMeasure, tvEnterWidthHeight"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>